--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,5 +5,8 @@
 
 @import "_elements.scss";
 @import "_typography.scss";
+@import "_grid.scss";
 
 @import "_base.scss";
+
+@import "views/_strategy-cards.scss";
