--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,60 +1,14 @@
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #222;
+    color: #fff;
+    box-sizing: border-box;
 }
 body {
-    background: $neutral-color-lllll;
+    // background-image: url('../img/star-background-1.jpg');
+    background-color: $color-navy-d;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
     padding: 3em;
-    max-width: 600px;
     margin: 0 auto;
-}
-hr {
-    margin: 3em 0;
-    border: none;
-    border-top: solid 1px $neutral-color-lll;
-}
-
-#list {
-    padding: 2em 0;
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
-}
-
-.list-item {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    @include card-style;
-    padding: 0.25em;
-    margin: 0.5em 0;
-}
-.list-item__field {
-    width: 100%;
-    padding: 0.5em 0.75em;
-    border-radius: $ui-radius;
-    border: solid 1px #fff;
-    // @include transition(background-color, 0.1s);
-    // @include transition(border-color, 0.1s);
-    &:hover,
-    &:focus {
-        background-color: lighten($primary-color-lllll, 8%);
-        box-shadow: inset 0 1px 2px 0 rgba($primary-color-llll, 1);
-    }
-}
-.list-item__remove {
-    padding: 0.25em;
-    svg {
-        line-height: 0;
-        fill: $neutral-color-llll;
-    }
-    &:hover {
-        cursor: pointer;
-        svg {
-            fill: $negate-color;
-        }
-    }
 }
