--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,11 @@
+// Layout
+$grid-margin-value: "(0.5em + 0.25vw)";
+$grid-margin: calc(#{$grid-margin-value});
+
 // Interface
+$card-padding-value: "(0.5em + 0.5vw)";
+$card-padding: calc(#{$card-padding-value});
+
 $block-radius: 5px;
 $ui-radius: 5px;
 $transition-time: 0.25s;
@@ -10,10 +17,50 @@ $h1-font-size: calc(#{$h1-font-size-value});
 $h2-font-size-value: '(1em + 0.25vw)';
 $h2-font-size: calc(#{$h2-font-size-value});
 
+$h3-font-size-value: '(0.85em + 0.25vw)';
+$h3-font-size: calc(#{$h3-font-size-value});
+
 $p-font-size-value: '(0.85em + 0.25vw)';
 $p-font-size: calc(#{$p-font-size-value});
 
+$subp-font-size-value: '(0.65em + 0.25vw)';
+$subp-font-size: calc(#{$subp-font-size-value});
+
+$paragraph-margin: 1.5rem;
+
 // Colors
+$color-red: #9b040c;
+$color-red-l: lighten($color-red, 12%);
+$color-red-d: darken($color-red, 12%);
+
+$color-orange: #e76d23;
+$color-orange-l: lighten($color-orange, 12%);
+$color-orange-d: darken($color-orange, 12%);
+
+$color-yellow: #f0b432;
+$color-yellow-l: lighten($color-yellow, 12%);
+$color-yellow-d: darken($color-yellow, 12%);
+
+$color-green: #1ba85d;
+$color-green-l: lighten($color-green, 12%);
+$color-green-d: darken($color-green, 12%);
+
+$color-teal: #24b09f;
+$color-teal-l: lighten($color-teal, 12%);
+$color-teal-d: darken($color-teal, 12%);
+
+$color-blue: #2894d2;
+$color-blue-l: lighten($color-blue, 12%);
+$color-blue-d: darken($color-blue, 12%);
+
+$color-navy: #133180;
+$color-navy-l: lighten($color-navy, 12%);
+$color-navy-d: darken($color-navy, 12%);
+
+$color-purple: #541f89;
+$color-purple-l: lighten($color-purple, 12%);
+$color-purple-d: darken($color-purple, 12%);
+
 $neutral-color: #808080;
 $neutral-color-lllll: lighten($neutral-color, 45%);
 $neutral-color-llll: lighten($neutral-color, 36%);
@@ -26,38 +73,10 @@ $neutral-color-ddd: darken($neutral-color, 27%);
 $neutral-color-dddd: darken($neutral-color, 36%);
 $neutral-color-ddddd: darken($neutral-color, 45%);
 
-$primary-color: #47B8C7;
-$primary-color-lllll: lighten($primary-color, 35%);
-$primary-color-llll: lighten($primary-color, 28%);
-$primary-color-lll: lighten($primary-color, 21%);
-$primary-color-ll: lighten($primary-color, 14%);
-$primary-color-l: lighten($primary-color, 7%);
-$primary-color-d: darken($primary-color, 7%);
-$primary-color-dd: darken($primary-color, 14%);
-$primary-color-ddd: darken($primary-color, 21%);
-$primary-color-dddd: darken($primary-color, 28%);
-$primary-color-ddddd: darken($primary-color, 35%);
-
 $affirm-color: #4AC747;
-$affirm-color-lllll: lighten($affirm-color, 35%);
-$affirm-color-llll: lighten($affirm-color, 28%);
-$affirm-color-lll: lighten($affirm-color, 21%);
-$affirm-color-ll: lighten($affirm-color, 14%);
-$affirm-color-l: lighten($affirm-color, 7%);
-$affirm-color-d: darken($affirm-color, 7%);
-$affirm-color-dd: darken($affirm-color, 14%);
-$affirm-color-ddd: darken($affirm-color, 21%);
-$affirm-color-dddd: darken($affirm-color, 28%);
-$affirm-color-ddddd: darken($affirm-color, 35%);
+$affirm-color-l: lighten($affirm-color, 12%);
+$affirm-color-d: darken($affirm-color, 12%);
 
 $negate-color: #C74757;
-$negate-color-lllll: lighten($negate-color, 35%);
-$negate-color-llll: lighten($negate-color, 28%);
-$negate-color-lll: lighten($negate-color, 21%);
-$negate-color-ll: lighten($negate-color, 14%);
-$negate-color-l: lighten($negate-color, 7%);
-$negate-color-d: darken($negate-color, 7%);
-$negate-color-dd: darken($negate-color, 14%);
-$negate-color-ddd: darken($negate-color, 21%);
-$negate-color-dddd: darken($negate-color, 28%);
-$negate-color-ddddd: darken($negate-color, 35%);
+$negate-color-l: lighten($negate-color, 12%);
+$negate-color-d: darken($negate-color, 12%);
