--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url('../img/star-background-1.jpg');
+    // background-image: url('../img/star-background-1.jpg');
     // background-color: $color-navy-d;
+    background-color: #333;
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
