--- a/scss/views/_round.scss
+++ b/scss/views/_round.scss
@@ -7,15 +7,20 @@
     }
 }
 
+body {
+    &.player-count-6 .player { width: calc((100% / 6) - #{$grid-margin-value}); }
+    &.player-count-5 .player { width: calc((100% / 5) - #{$grid-margin-value}); }
+    &.player-count-4 .player { width: calc((100% / 4) - #{$grid-margin-value}); }
+    &.player-count-3 .player { width: calc((100% / 3) - #{$grid-margin-value}); }
+    &.player-count-2 .player { width: calc((100% / 2) - #{$grid-margin-value}); }
+}
+
 .player {
-    width: calc((100% / 6) - #{$grid-margin-value});
-    background: rgba(#000, 0.7);
-    border-top: solid 4px #fff;
-    box-shadow: inset 0 0 72px rgba(#000, 0.85);
+    background: rgba(#000, 0.5);
+    // box-shadow: inset 0 0 72px rgba(#000, 0.85);
     text-align: center;
-    padding: $card-padding;
     h3 {
-        text-transform: uppercase;
+        // text-transform: uppercase;
         margin-bottom: $card-padding;
     }
     &.passed {
@@ -24,6 +29,16 @@
             visibility: hidden;
         }
     }
+
+    // Player Races
+    .player__race-image {
+        background-image: url('https://source.unsplash.com/random/400x600');
+        background-size: cover;
+        background-position: center center;
+        height: 25vh;
+    }
+
+    // Player Colors
     &.player--red {
         border-color: $color-red;
     }
@@ -41,5 +56,53 @@
     }
     &.player--purple {
         border-color: $color-purple;
+    }
+
+    .player__turn-info {
+        padding: $card-padding;
+        border-top: solid 4px #fff;
+        position: relative;
+    }
+
+    .player__turn-number {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        background: #fff;
+        border-radius: 50%;
+        color: #333;
+    }
+
+    input[type="checkbox"] {
+        position: absolute;
+        left: -9999px;
+        visibility: hidden;
+        &:checked {
+            & ~ label {
+                background: #333;
+                color: #777;
+            }
+        }
+        &.disabled ~ label {
+            opacity: 0.5;
+            pointer-events: none;
+        }
+    }
+    label {
+        display: block;
+        color: #333;
+        font-weight: 700;
+        font-size: $subp-font-size;
+        background: #bbb;
+        border: solid 1px transparent;
+        padding: calc(#{$paragraph-margin} / 3);
+        border-radius: $ui-radius;
+        margin-bottom: $card-padding;
+        // @include spaced-letters;
+        cursor: pointer;
+        &:hover {
+            background: #fff;
+        }
     }
 }
