--- a/scss/views/_strategy-cards.scss
+++ b/scss/views/_strategy-cards.scss
@@ -9,13 +9,13 @@
 
 .strategy {
     width: calc(12.5% - #{$grid-margin-value});
-    background: rgba(#000, 0.7);
-    border-top: solid 4px #fff;
-    box-shadow: inset 0 0 72px rgba(#000, 0.85);
+    background: rgba(#000, 0.4);
+    // border-top: solid 4px #fff;
+    // box-shadow: inset 0 0 72px rgba(#000, 0.85);
     text-align: center;
     padding: $card-padding;
     h3 {
-        text-transform: uppercase;
+        // text-transform: uppercase;
         margin-bottom: $card-padding;
     }
     &.picked {
@@ -62,8 +62,8 @@
         visibility: hidden;
         &:checked {
             & ~ label {
-                background: $color-teal;
-                color: #fff;
+                background: #fff;
+                color: #333;
                 border-color: transparent;
             }
         }
@@ -78,7 +78,7 @@
         padding: calc(#{$paragraph-margin} / 3);
         border-radius: $ui-radius;
         margin-bottom: $card-padding;
-        @include spaced-letters;
+        // @include spaced-letters;
         cursor: pointer;
         &:hover {
             color: rgba(#fff, 0.5);
