--- a/css/styles.css
+++ b/css/styles.css
@@ -349,49 +349,55 @@ button::-moz-focus-inner {
   -ms-user-select: none; }
 
 .button-lg {
+  font-family: "Slider", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
-  font-size: calc((0.85em + 0.25vw));
+  font-size: calc((0.75em + 0.25vw));
   border-radius: 5px;
   color: #fff;
   background: #808080;
   cursor: pointer;
   line-height: 1;
   padding: 0.5em 1em;
+  text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0.75em 1.25em; }
   .button-lg[disabled] {
-    opacity: 0.5; }
+    opacity: 0.25; }
 
 .button-md {
+  font-family: "Slider", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
-  font-size: calc((0.85em + 0.25vw));
+  font-size: calc((0.75em + 0.25vw));
   border-radius: 5px;
   color: #fff;
   background: #808080;
   cursor: pointer;
   line-height: 1;
   padding: 0.5em 1em;
+  text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: calc((0.85em + 0.25vw)*0.85); }
+  font-size: calc((0.75em + 0.25vw)*0.85); }
   .button-md[disabled] {
-    opacity: 0.5; }
+    opacity: 0.25; }
 
 .button-sm {
+  font-family: "Slider", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
-  font-size: calc((0.85em + 0.25vw));
+  font-size: calc((0.75em + 0.25vw));
   border-radius: 5px;
   color: #fff;
   background: #808080;
   cursor: pointer;
   line-height: 1;
   padding: 0.5em 1em;
+  text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: calc((0.85em + 0.25vw)*0.7); }
+  font-size: calc((0.75em + 0.25vw)*0.7); }
   .button-sm[disabled] {
-    opacity: 0.5; }
+    opacity: 0.25; }
 
 .primary-button {
   background: #e76d23; }
@@ -430,6 +436,9 @@ h1, h2, h3, h4, h5, h6, p, label {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Slider", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+
 h1 {
   font-size: calc((2em + 1vw)); }
 
@@ -437,10 +446,10 @@ h2 {
   font-size: calc((1em + 0.25vw)); }
 
 h3 {
-  font-size: calc((0.85em + 0.25vw)); }
+  font-size: calc((0.75em + 0.25vw)); }
 
 p, label {
-  font-size: calc((0.85em + 0.25vw)); }
+  font-size: calc((0.75em + 0.25vw)); }
 
 .flex-row {
   display: flex;
@@ -453,30 +462,41 @@ p, label {
     margin: calc((0.5em + 0.25vw) / 2); }
 
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #fff;
   box-sizing: border-box; }
 
 body {
-  background-color: #333;
+  background-image: url("../img/star-background-2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
-  padding: 3em;
-  margin: 0 auto; }
+  padding: 2em;
+  margin: 0 auto;
+  position: relative; }
+
+.module {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: calc(100% - 4em); }
 
 .strategies .module__body {
   flex-wrap: wrap; }
 
 .strategies .module__foot {
-  margin-top: 1.5rem; }
+  margin-top: 1.5rem;
+  text-align: center; }
 
 .strategy {
   width: calc(12.5% - (0.5em + 0.25vw));
   background: rgba(0, 0, 0, 0.4);
+  border-top: solid 6px #fff;
+  box-shadow: inset 0 0 72px rgba(0, 0, 0, 0.85);
   text-align: center;
   padding: calc((0.5em + 0.5vw)); }
   .strategy h3 {
+    text-transform: uppercase;
     margin-bottom: calc((0.5em + 0.5vw)); }
   .strategy.picked {
     opacity: 0.5; }
@@ -484,20 +504,36 @@ body {
       visibility: hidden; }
   .strategy.strategy__leadership {
     border-color: #9b040c; }
+    .strategy.strategy__leadership input:checked ~ label {
+      background: #9b040c; }
   .strategy.strategy__diplomacy {
     border-color: #e76d23; }
+    .strategy.strategy__diplomacy input:checked ~ label {
+      background: #e76d23; }
   .strategy.strategy__politics {
     border-color: #f0b432; }
+    .strategy.strategy__politics input:checked ~ label {
+      background: #f0b432; }
   .strategy.strategy__construction {
     border-color: #1ba85d; }
+    .strategy.strategy__construction input:checked ~ label {
+      background: #1ba85d; }
   .strategy.strategy__trade {
     border-color: #24b09f; }
+    .strategy.strategy__trade input:checked ~ label {
+      background: #24b09f; }
   .strategy.strategy__warfare {
     border-color: #2894d2; }
+    .strategy.strategy__warfare input:checked ~ label {
+      background: #2894d2; }
   .strategy.strategy__technology {
-    border-color: #133180; }
+    border-color: #1b45b5; }
+    .strategy.strategy__technology input:checked ~ label {
+      background: #1b45b5; }
   .strategy.strategy__imperial {
     border-color: #541f89; }
+    .strategy.strategy__imperial input:checked ~ label {
+      background: #541f89; }
 
 .strategy__player-select .field-row:last-child label {
   margin-bottom: 0; }
@@ -507,8 +543,7 @@ body {
   left: -9999px;
   visibility: hidden; }
   .strategy__player-select input[type="checkbox"]:checked ~ label {
-    background: #fff;
-    color: #333;
+    color: #fff;
     border-color: transparent; }
 
 .strategy__player-select label {
@@ -516,7 +551,7 @@ body {
   color: rgba(255, 255, 255, 0.25);
   font-weight: 700;
   font-size: calc((0.65em + 0.25vw));
-  border: solid 1px transparent;
+  background: rgba(255, 255, 255, 0.05);
   padding: calc(1.5rem / 3);
   border-radius: 5px;
   margin-bottom: calc((0.5em + 0.5vw));
@@ -528,7 +563,8 @@ body {
   flex-wrap: nowrap; }
 
 .round .module__foot {
-  margin-top: 1.5rem; }
+  margin-top: 1.5rem;
+  text-align: center; }
 
 body.player-count-6 .player {
   width: calc((100% / 6) - (0.5em + 0.25vw)); }
@@ -546,31 +582,77 @@ body.player-count-2 .player {
   width: calc((100% / 2) - (0.5em + 0.25vw)); }
 
 .player {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0 0 72px rgba(0, 0, 0, 0.85);
   text-align: center; }
   .player h3 {
-    margin-bottom: calc((0.5em + 0.5vw)); }
+    margin: calc((0.5em + 0.5vw)) 0; }
   .player.passed {
     opacity: 0.5; }
     .player.passed input:not(:checked) ~ label {
       visibility: hidden; }
   .player .player__race-image {
-    background-image: url("https://source.unsplash.com/random/400x600");
     background-size: cover;
     background-position: center center;
-    height: 25vh; }
-  .player.player--red {
+    height: 35vh; }
+  .player.player--thearborec .player__race-image {
+    background-image: url("../img/races/thearborec.jpg"); }
+  .player.player--thebaronyofletnev .player__race-image {
+    background-image: url("../img/races/thebaronyofletnev.jpg"); }
+  .player.player--theclanofsaar .player__race-image {
+    background-image: url("../img/races/theclanofsaar.jpg"); }
+  .player.player--theembersofmuaat .player__race-image {
+    background-image: url("../img/races/theembersofmuaat.jpg"); }
+  .player.player--theemiratesofhacan .player__race-image {
+    background-image: url("../img/races/theemiratesofhacan.jpg"); }
+  .player.player--thefederationofsol .player__race-image {
+    background-image: url("../img/races/thefederationofsol.jpg"); }
+  .player.player--theghostsofcreuss .player__race-image {
+    background-image: url("../img/races/theghostsofcreuss.jpg"); }
+  .player.player--thel1z1xmindnet .player__race-image {
+    background-image: url("../img/races/thel1z1xmindnet.jpg"); }
+  .player.player--thementakcoalition .player__race-image {
+    background-image: url("../img/races/thementakcoalition.jpg"); }
+  .player.player--thenaalucollective .player__race-image {
+    background-image: url("../img/races/thenaalucollective.jpg"); }
+  .player.player--thenekrovirus .player__race-image {
+    background-image: url("../img/races/thenekrovirus.jpg"); }
+  .player.player--thesardakkn\'orr .player__race-image {
+    background-image: url("../img/races/thesardakkn'orr.jpg"); }
+  .player.player--theuniversitiesofjol-nar .player__race-image {
+    background-image: url("../img/races/theuniversitiesofjol-nar.jpg"); }
+  .player.player--thewinnu .player__race-image {
+    background-image: url("../img/races/thewinnu.jpg"); }
+  .player.player--thexxchakingdom .player__race-image {
+    background-image: url("../img/races/thexxchakingdom.jpg"); }
+  .player.player--theyinbrotherhood .player__race-image {
+    background-image: url("../img/races/theyinbrotherhood.jpg"); }
+  .player.player--theyssariltribes .player__race-image {
+    background-image: url("../img/races/theyssariltribes.jpg"); }
+  .player.player--red .player__turn-info {
     border-color: #9b040c; }
-  .player.player--yellow {
+  .player.player--red .player__turn-number {
+    background-color: #9b040c; }
+  .player.player--yellow .player__turn-info {
     border-color: #f0b432; }
-  .player.player--green {
+  .player.player--yellow .player__turn-number {
+    background-color: #f0b432; }
+  .player.player--green .player__turn-info {
     border-color: #1ba85d; }
-  .player.player--blue {
+  .player.player--green .player__turn-number {
+    background-color: #1ba85d; }
+  .player.player--blue .player__turn-info {
     border-color: #2894d2; }
-  .player.player--black {
+  .player.player--blue .player__turn-number {
+    background-color: #2894d2; }
+  .player.player--black .player__turn-info {
     border-color: #222222; }
-  .player.player--purple {
+  .player.player--black .player__turn-number {
+    background-color: #222222; }
+  .player.player--purple .player__turn-info {
     border-color: #541f89; }
+  .player.player--purple .player__turn-number {
+    background-color: #541f89; }
   .player .player__turn-info {
     padding: calc((0.5em + 0.5vw));
     border-top: solid 4px #fff;
@@ -580,18 +662,21 @@ body.player-count-2 .player {
     top: 0;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background: #fff;
     border-radius: 50%;
-    color: #333; }
+    color: #fff;
+    width: 1.5em;
+    height: 1.5em;
+    line-height: 1.5em;
+    font-weight: 700; }
   .player input[type="checkbox"] {
     position: absolute;
     left: -9999px;
     visibility: hidden; }
     .player input[type="checkbox"]:checked ~ label {
-      background: #333;
-      color: #777; }
+      background: rgba(34, 34, 34, 0.5) !important;
+      color: rgba(255, 255, 255, 0.5); }
     .player input[type="checkbox"].disabled ~ label {
-      opacity: 0.5;
+      opacity: 0.25;
       pointer-events: none; }
   .player label {
     display: block;
@@ -606,3 +691,31 @@ body.player-count-2 .player {
     cursor: pointer; }
     .player label:hover {
       background: #fff; }
+  .player .player__strat-button {
+    margin: calc(calc((0.5em + 0.5vw)) * 2) 0; }
+    .player .player__strat-button label {
+      font-family: "Slider", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      text-transform: uppercase;
+      color: #000;
+      background: #fff; }
+      .player .player__strat-button label.leadership {
+        color: #9b040c; }
+      .player .player__strat-button label.diplomacy {
+        color: #e76d23; }
+      .player .player__strat-button label.politics {
+        color: #f0b432; }
+      .player .player__strat-button label.construction {
+        color: #1ba85d; }
+      .player .player__strat-button label.trade {
+        color: #24b09f; }
+      .player .player__strat-button label.warfare {
+        color: #2894d2; }
+      .player .player__strat-button label.technology {
+        color: #1b45b5; }
+      .player .player__strat-button label.imperial {
+        color: #541f89; }
+  .player .player__pass-button {
+    margin-bottom: calc((0.5em + 0.5vw)); }
+    .player .player__pass-button label {
+      max-width: 60%;
+      margin: 0 auto; }
