--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,15 +1,20 @@
 * {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: $primary-font;
     color: #fff;
     box-sizing: border-box;
 }
 body {
-    // background-image: url('../img/star-background-1.jpg');
-    // background-color: $color-navy-d;
-    background-color: #333;
+    background-image: url('../img/star-background-2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
-    padding: 3em;
+    padding: 2em;
     margin: 0 auto;
+    position: relative;
+}
+.module {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: calc(100% - 4em);
 }
