--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6, p, label {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    // font-family: 'Slider';
+    font-family: $secondary-font;
 }
 
 h1 {
