--- a/src/components/Players/Player/_Player.scss
+++ b/src/components/Players/Player/_Player.scss
@@ -1,3 +1,10 @@
+.players {
+    margin-bottom: $grid-margin;
+    @media (max-width: 760px) {
+        flex-flow: row wrap;
+    }
+}
+
 .player__card {
     text-align: center;
 }
