--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+// Global
 @import "styles/_normalize.scss";
 
 @import "styles/_variables.scss";
@@ -10,9 +11,15 @@
 
 @import "styles/_base.scss";
 
+// Components
+@import "components/Navigation/_Navigation.scss";
+@import "components/Score/_Score.scss";
+
 @import "components/Players/_PlayerContainer.scss";
 @import "components/Players/Player/_Player.scss";
 @import "components/Players/CreatePlayer/_CreatePlayer.scss";
+
+@import "components/Round/_RoundContainer.scss";
 
 // @import "views/_strategy-cards.scss";
 // @import "views/_round.scss";
