add demo of animated view navigation

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,8 @@
 @import "styles/_base.scss";
 
 // Components
+@import "components/App/_App.scss";
+
 @import "components/Navigation/_Navigation.scss";
 @import "components/Score/_Score.scss";
 
