--- a/src/components/Navigation/_Navigation.scss
+++ b/src/components/Navigation/_Navigation.scss
@@ -2,27 +2,46 @@ nav {
     ul {
         display: flex;
         flex-flow: row nowrap;
+        justify-content: center;
         padding: 0;
-        margin: 0;
+        margin: 0 auto;
         list-style: none;
+        width: calc(120px * 4);
     }
-    a {
+    button, a {
         display: block;
         color: #fff;
         background: blue;
-        padding: calc(#{$paragraph-margin} * 0.75) $paragraph-margin;
         text-decoration: none;
         font-size: 0.8em;
+        width: 120px;
+        height: 70px;
+        position: relative;
+        text-align: center;
         background: linear-gradient( rgba($color-blue, 0.25), rgba($color-blue, 0.9) );
-        &.active {
+        &.active,
+        &:active {
             background: linear-gradient( rgba($color-orange, 0.25), rgba($color-orange, 0.9) );
         }
+        svg {
+            fill: #fff;
+            width: 24px;
+        }
+        p {
+            margin: 0;
+        }
+    }
+    .nav__label {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
     }
     li {
-        &:first-child a {
+        &:first-child button {
             border-radius: $ui-radius 0 0 0;
         }
-        &:last-child a {
+        &:last-child button {
             border-radius: 0 $ui-radius 0 0;
         }
     }
