--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,13 +3,13 @@
 	box-sizing: border-box;
 }
 body {
-	background: #333;
+	// background: #333;
 	// background-color: #272741;
-	// background-image: url('/images/star-background-2.jpg');
+	background-image: url('/images/star-background-2.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	min-height: 100vh;
-	padding: calc( #{$grid-margin} * 3 );
+	// padding: calc( #{$grid-margin} * 3 );
 	margin: 0 auto;
 	position: relative;
 }
