revise view structure, start create player modal

--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -1,10 +1,11 @@
-$navigation-height: 70px;
+$navigation-height: 60px;
 
 .app {
     overflow: hidden;
     display: grid;
     grid-template-columns: 100vw;
     grid-template-rows: calc(100vh - #{$navigation-height}) $navigation-height;
+    position: relative;
 }
 nav {
     grid-row: 2;
@@ -17,14 +18,17 @@ nav {
     display: flex;
     flex-flow: row nowrap;
     transition: all ease-in-out 0.5s;
-    &.view-1--active { left: 0; }
-    &.view-2--active { left: -100vw; }
-    &.view-3--active { left: -200vw; }
-    &.view-4--active { left: -300vw; }
+    &.view__1--active { left: 0; }
+    &.view__2--active { left: -100vw; }
+    &.view__3--active { left: -200vw; }
+    &.view__4--active { left: -300vw; }
+    &.view__5--active { left: -400vw; }
+    &.view__6--active { left: -500vw; }
 }
 .view {
-    padding: calc( #{$grid-margin} * 3 );
+    padding: calc( var(--grid-margin) * 3 );
     width: 100vw;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
