--- a/src/index.scss
+++ b/src/index.scss
@@ -15,13 +15,20 @@
 @import "components/App/_App.scss";
 
 @import "components/Navigation/_Navigation.scss";
-@import "components/Score/_Score.scss";
 
 @import "components/Players/_PlayerContainer.scss";
 @import "components/Players/Player/_Player.scss";
 @import "components/Players/CreatePlayer/_CreatePlayer.scss";
 
+@import "components/Score/_ScoreContainer.scss";
+
 @import "components/Round/_RoundContainer.scss";
+
+@import "components/Agenda/_AgendaContainer.scss";
+
+@import "components/Rules/_RulesContainer.scss";
+
+@import "components/Settings/_SettingsContainer.scss";
 
 // @import "views/_strategy-cards.scss";
 // @import "views/_round.scss";
