--- a/src/components/Navigation/_Navigation.scss
+++ b/src/components/Navigation/_Navigation.scss
@@ -1,12 +1,17 @@
 nav {
     ul {
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
+        // display: flex;
+        // flex-flow: row nowrap;
+        // justify-content: center;
         padding: 0;
         margin: 0 auto;
         list-style: none;
-        width: calc(120px * 4);
+        // width: calc(120px * 4);
+        width: 100%;
+        display: grid;
+        grid-template-rows: $navigation-height;
+        grid-auto-columns: 1fr;
+        grid-auto-flow: column;
     }
     button, a {
         display: block;
@@ -14,15 +19,20 @@ nav {
         background: blue;
         text-decoration: none;
         font-size: 0.8em;
-        width: 120px;
-        height: 70px;
+        // width: 120px;
+        width: 100%;
+        height: $navigation-height;
         position: relative;
         text-align: center;
-        background: linear-gradient( rgba($color-blue, 0.25), rgba($color-blue, 0.9) );
-        &.active,
-        &:active {
-            background: linear-gradient( rgba($color-orange, 0.25), rgba($color-orange, 0.9) );
+        background: rgba(#fff, 0.25);
+        &.active {
+            background: rgba(#fff, 0.5);
         }
+        // background: linear-gradient( rgba($color-blue, 0.25), rgba($color-blue, 0.9) );
+        // &.active,
+        // &:active {
+        //     background: linear-gradient( rgba($color-orange, 0.25), rgba($color-orange, 0.9) );
+        // }
         svg {
             fill: #fff;
             width: 24px;
@@ -39,10 +49,10 @@ nav {
     }
     li {
         &:first-child button {
-            border-radius: $ui-radius 0 0 0;
+            border-radius: var(--ui-radius) 0 0 0;
         }
         &:last-child button {
-            border-radius: 0 $ui-radius 0 0;
+            border-radius: 0 var(--ui-radius) 0 0;
         }
     }
 }
