--- a/src/components/Players/CreatePlayer/_CreatePlayer.scss
+++ b/src/components/Players/CreatePlayer/_CreatePlayer.scss
@@ -1,16 +1,12 @@
 $create-thumb-size: calc(48px + 1vw);
 
-.create-player {
-    // display: flex;
-    // flex-flow: row nowrap;
+.players__create-player {
+
     .form__field {
         .flex-row {
             flex-flow: row wrap;
             justify-content: flex-start;
         }
-    }
-    .form__field-option {
-        width: auto;
     }
     
     input[type="radio"]{
@@ -18,23 +14,37 @@ $create-thumb-size: calc(48px + 1vw);
         left: -9999px;
 
         &:checked ~ label {
-            opacity: 1;
+            // opacity: 1;
             &:after {
                 content: "";
                 position: absolute;
-                left: -3px;
-                top: -3px;
-                width: $create-thumb-size;
-                height: $create-thumb-size;
-                border: solid 3px $color-orange-l !important;
-                border-radius: calc(#{$ui-radius} + 3px);
+                left: -2px;
+                top: -2px;
+                width: 100%;
+                height: 100%;
+                border: solid 2px var(--color-orange-l) !important;
+                border-radius: calc( var(--ui-radius) + 2px);
             }
         }
 
         &:disabled ~ label {
-            opacity: 0.15;
+            opacity: 0.25;
+            position: relative;
+            // filter: grayscale(100%);
             &:hover:before {
                 content: none;
+            }
+            &:after {
+                content: "";
+                background-image: url('images/cancel-white.svg');
+                background-repeat: no-repeat;
+                background-position: center center;
+                background-size: 75%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
             }
         }
     }
@@ -43,12 +53,10 @@ $create-thumb-size: calc(48px + 1vw);
         position: relative;
         display: block;
         color: transparent;
-        width: $create-thumb-size;
-        height: $create-thumb-size;
-        border-radius: $ui-radius;
+        border-radius: var(--ui-radius);
         margin: 0;
         cursor: pointer;
-        opacity: 0.8;
+        // opacity: 0.8;
         &:hover:before {
             content: "";
             position: absolute;
@@ -57,58 +65,75 @@ $create-thumb-size: calc(48px + 1vw);
             width: 100%;
             height: 100%;
             box-shadow: 0 0 0px 3px inset rgba(#fff, 0.3); 
-            border-radius: $ui-radius;
+            border-radius: var(--ui-radius);
+        }
+    }
+
+    .grid-row {
+        display: flex;
+        flex-flow: row wrap;
+        margin: calc( var(--grid-margin) * -1 );
+        & > * {
+            flex-basis: calc( 20% - var(--grid-margin) );
+            margin: calc( var(--grid-margin) * 0.5);
+            line-height: 0;
+            @media (min-width: 420px) {
+                flex-basis: calc( 16.667% - ( var(--grid-margin) * 2) );
+            }
+        }
+        @media (min-width: 600px) {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(72px, 1fr));
+            grid-gap: var(--grid-margin);
         }
     }
 }
 
-// .create-player__thumbnails {
-//     .form__field {
-//         display: inline-block;
-//     }
-// }
+
 
 .create-player__race {
     img {
-        width: $create-thumb-size;
-        height: $create-thumb-size;
-        border-radius: $ui-radius;
+        width: 100%;
+        border-radius: var(--ui-radius);
     }
 }
 
 .create-player__color {
-    width: calc( ( #{$create-thumb-size} * 3) + ( #{$grid-margin} * 5 ) );
-    width: calc( ( (48px + 1vw) * 3) + ( (0.25em + 0.25vw) * 5 ) );
     span {
-        opacity: 0;
+        position: absolute;
+        left: -9999px;
     }
     label {
         background-image: url('images/textures/real-carbon-fibre.png');
         background-size: 30px;
         background-blend-mode: multiply;
+        // padding-top: calc( 100% - ( var(--grid-margin) * 2) );
         &[for="create-player-color-black"] {
-            background-color: $color-black; 
-            box-shadow: 0 0 0px 3px inset $color-black; 
+            background-color: var(--color-black); 
+            box-shadow: 0 0 0px 3px inset var(--color-black); 
         }
         &[for="create-player-color-blue"] {
-            background-color: $color-blue; 
-            box-shadow: 0 0 0px 3px inset $color-blue; 
+            background-color: var(--color-blue); 
+            box-shadow: 0 0 0px 3px inset var(--color-blue); 
         }
         &[for="create-player-color-green"] {
-            background-color: $color-green; 
-            box-shadow: 0 0 0px 3px inset $color-green; 
+            background-color: var(--color-green); 
+            box-shadow: 0 0 0px 3px inset var(--color-green); 
         }
         &[for="create-player-color-red"] {
-            background-color: $color-red; 
-            box-shadow: 0 0 0px 3px inset $color-red; 
+            background-color: var(--color-red); 
+            box-shadow: 0 0 0px 3px inset var(--color-red); 
         }
         &[for="create-player-color-purple"] {
-            background-color: $color-purple; 
-            box-shadow: 0 0 0px 3px inset $color-purple; 
+            background-color: var(--color-purple); 
+            box-shadow: 0 0 0px 3px inset var(--color-purple); 
         }
         &[for="create-player-color-yellow"] {
-            background-color: $color-yellow; 
-            box-shadow: 0 0 0px 3px inset $color-yellow; 
+            background-color: var(--color-yellow); 
+            box-shadow: 0 0 0px 3px inset var(--color-yellow); 
         }
+    }
+    svg {
+        width: 100%;
     }
 }
