--- a/src/components/Players/Player/_Player.scss
+++ b/src/components/Players/Player/_Player.scss
@@ -1,23 +1,47 @@
-.players {
-    margin-bottom: $grid-margin;
-    @media (max-width: 760px) {
-        flex-flow: row wrap;
+.player {
+    padding: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    overflow: hidden;
+}
+.player__image {
+    font-size: 0;
+    img {
+        max-width: 72px;
+        border-radius: var(--block-radius) 0 0 var(--block-radius);
+    }
+    @at-root {
+        .player--purple & { border-right: solid 6px var(--color-purple); }
+        .player--blue & { border-right: solid 6px var(--color-blue); }
+        .player--green & { border-right: solid 6px var(--color-green); }
+        .player--yellow & { border-right: solid 6px var(--color-yellow); }
+        .player--red & { border-right: solid 6px var(--color-red); }
+        .player--black & { border-right: solid 6px var(--color-black); }
+    }
+}
+.player__content {
+    width: 100%;
+    height: 72px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 var(--block-radius) var(--block-radius) 0;
+    padding: var(--card-padding);
+    border: var(--card-border);
+    border-left: none;
+    background: var(--card-background);
+}
+.player__info {
+    margin-right: var(--card-padding);
+    h2, p {
+        margin: 0;
+    }
+    h2 {
+        margin-bottom: 0.5em;
     }
 }
 
-.player__card {
-    text-align: center;
-}
 
-.player--purple { border-top: solid 4px $color-purple; }
-.player--blue { border-top: solid 4px $color-blue; }
-.player--green { border-top: solid 4px $color-green; }
-.player--yellow { border-top: solid 4px $color-yellow; }
-.player--red { border-top: solid 4px $color-red; }
-.player--black { border-top: solid 4px $color-black; }
 
-.player__score-controls {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-}
