--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,9 +3,9 @@
 	box-sizing: border-box;
 }
 body {
-	// background: #333;
+	background: #333;
 	// background-color: #272741;
-	background-image: url('/images/star-background-2.jpg');
+	// background-image: url('/images/star-background-2.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	min-height: 100vh;
@@ -20,8 +20,57 @@ body {
 	width: calc(100% - 4em);
 }
 .card {
-	background: rgba($color-blue,0.1);
-	border: solid 1px rgba($color-blue,0.5);
-	border-radius: $block-radius;
+	// background: rgba($color-blue,0.1);
+	// border: solid 1px rgba($color-blue,0.5);
+	background: var(--card-background);
+	border: var(--card-border);
+	border-radius: var(--block-radius);
+	padding: var(--card-padding);
+}
+
+.modal-container {
+    display: none; 
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+	// background: rgba(#000, 0.95);
+	background: #111;
 	padding: $paragraph-margin;
+	&.modal--show {
+		display: flex;
+	}
+}
+.modal {
+	width: 100%;
+	max-height: 100%;
+	max-width: 760px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	position: relative;
+	&.modal--show {
+		display: block;
+	}
+}
+.modal__close-btn {
+	position: absolute;
+	padding: calc(var(--card-padding) / 2);
+	top: 0;
+	right: 0;
+	border-left: var(--card-border);
+	border-bottom: var(--card-border);
+	border-radius: 0 0 0 var(--block-radius);
+	line-height: 0;
+	svg {
+		fill: #fff;
+		height: 32px;
+		width: 32px;
+	}
+	&:hover {
+		background: rgba(#fff, 0.15);
+		border: none;
+	}
 }
