--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,70 @@
+:root {
+    
+    // Colors
+    $color-white:       #fff;
+    --color-white:      #{$color-white};
+
+    $color-red:        rgb(155, 4, 12);
+    --color-red:        #{$color-red};
+    --color-red-l:      #{lighten( $color-red, 12%)};
+    --color-red-d:      #{darken( $color-red, 12%)};
+
+    $color-orange:     rgb(231, 109, 35);
+    --color-orange:     #{$color-orange};
+    --color-orange-l:   #{lighten( $color-orange, 12%)};
+    --color-orange-d:   #{darken( $color-orange, 12%)};
+
+    $color-yellow:     rgb(230, 221, 50);
+    --color-yellow:     #{$color-yellow};
+    --color-yellow-l:   #{lighten( $color-yellow, 12%)};
+    --color-yellow-d:   #{darken( $color-yellow, 12%)};
+
+    $color-green:      rgb(27, 168, 93);
+    --color-green:      #{$color-green};
+    --color-green-l:    #{lighten( $color-green, 12%)};
+    --color-green-d:    #{darken( $color-green, 12%)};
+
+    $color-teal:       rgb(36, 176, 159);
+    --color-teal:       #{$color-teal};
+    --color-teal-l:     #{lighten( $color-teal, 12%)};
+    --color-teal-d:     #{darken( $color-teal, 12%)};
+
+    $color-blue:       rgb(40, 148, 210);
+    --color-blue:       #{$color-blue};
+    --color-blue-l:     #{lighten( $color-blue, 12%)};
+    --color-blue-d:     #{darken( $color-blue, 12%)};
+
+    $color-navy:       rgb(19, 49, 128);
+    --color-navy:       #{$color-navy};
+    --color-navy-l:     #{lighten( $color-navy, 12%)};
+    --color-navy-d:     #{darken( $color-navy, 12%)};
+
+    $color-purple:     rgb(84, 31, 137);
+    --color-purple:     #{$color-purple};
+    --color-purple-l:   #{lighten( $color-purple, 12%)};
+    --color-purple-d:   #{darken( $color-purple, 12%)};
+
+    $color-black:      rgb(11, 11, 11);
+    --color-black:      #{$color-black};
+    --color-black-l:    #{lighten( $color-black, 12%)};
+    --color-black-d:    #{darken( $color-black, 12%)};
+
+    // Layout
+    --grid-margin:      calc(0.25em + 0.25vw);
+
+    // Interface
+    --card-padding:     calc(0.5em + 0.5vw);
+    --card-border:      solid 1px #{rgba($color-white, 0.15)};
+    --card-background:  rgba(255, 255, 255 ,0.05);
+
+    --block-radius:      5px;
+    --ui-radius:         5px;
+    
+    --transition-time:   0.25s;
+}
+
 // Breakpoints
-$mobile-size:       1024px;
-
-// Layout
-$grid-margin:       calc(0.25em + 0.25vw);
-
-// Interface
-$card-padding:      calc(0.5em + 0.5vw);
-
-$block-radius:      5px;
-$ui-radius:         5px;
-$transition-time:   0.25s;
+$mobile-size:       1024px;    
 
 // Typography
 $primary-font:      -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -24,47 +79,7 @@ $subp-font-size:    calc(0.65em + 0.25vw);
 
 $paragraph-margin:  1.5rem;
 
-// Colors
-$color-red:       #9b040c;
-$color-red-l:       lighten($color-red, 12%);
-$color-red-d:       darken($color-red, 12%);
 
-$color-orange:    #e76d23;
-$color-orange-l:    lighten($color-orange, 12%);
-$color-orange-d:    darken($color-orange, 12%);
-
-// $color-yellow: #f0b432;
-$color-yellow:    #e6dd32;
-$color-yellow-l:    lighten($color-yellow, 12%);
-$color-yellow-d:    darken($color-yellow, 12%);
-
-$color-green:     #1ba85d;
-$color-green-l:     lighten($color-green, 12%);
-$color-green-d:     darken($color-green, 12%);
-
-$color-teal:      #24b09f;
-$color-teal-l:      lighten($color-teal, 12%);
-$color-teal-d:      darken($color-teal, 12%);
-
-$color-blue:      #2894d2;
-$color-blue-l:      lighten($color-blue, 12%);
-$color-blue-d:      darken($color-blue, 12%);
-
-$color-navy:      #133180;
-$color-navy-l:      lighten($color-navy, 12%);
-$color-navy-d:      darken($color-navy, 12%);
-
-$color-purple:    #541f89;
-$color-purple-l:    lighten($color-purple, 12%);
-$color-purple-d:    darken($color-purple, 12%);
-
-$color-black:     #444;
-$color-black-l:     lighten($color-black, 12%);
-$color-black-d:     darken($color-black, 12%);
-
-$color-white:     #ddd;
-$color-white-l:   #fff;
-$color-white-d:   #bbb;
 
 $neutral-color: #808080;
 $neutral-color-lllll: lighten($neutral-color, 45%);
